multilaterals json file tweaks

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rimraf dist && webpack --progress --colors --optimize-minimize",
     "dev": "webpack --watch",
-    "start": "node dist/hh_app.js",
+    "start-hh": "node dist/hh_app.js",
     "lint": "eslint src --cache",
     "test": " NODE_ENV=test mocha $(find src -name '*-test.js')  --compilers js:babel-core/register",
     "test-watch": "NODE_ENV=test mocha $(find src -name '*-test.js') --compilers js:babel-core/register --watch"
